src/objects/CategoryAssignment__c.object
<CustomObject>
    <description>Handles the relationship between each Category and different object records (Community Components at this moment)</description>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <referenceTo>Category__c</referenceTo>
        <relationshipLabel>Category Assignments</relationshipLabel>
        <relationshipName>CategoryAssignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Component</label>
        <referenceTo>Component__c</referenceTo>
        <relationshipLabel>Category Assignments</relationshipLabel>
        <relationshipName>CategoryAssignments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</description>
        <externalId>true</externalId>
        <inlineHelpText>Autocompleted/editable field based on Name and Cluster External Id for import/export purposes.</inlineHelpText>
        <label>External Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Category Assignment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CA-{00000}</displayFormat>
        <label>Category Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Category Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>